[package]
name = "openbook-v2_crank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openbook-v2 = { git = "https://github.com/openbook-dex/openbook-v2", tag = "v1.1", features = [
  "enable-gpl",
] }
anchor-lang = "0.28.0"
anyhow = "1.0.70"
async-channel = "1.6"
async-std = "1.12.0"
async-trait = "0.1.71"
bincode = "1.3.3"
bytemuck = "1.7.2"
chrono = "0.4.19"
clap = { version = "4.2.4", features = ["derive"] }
csv-async = "1.2"
dashmap = "5.4.0"
futures = "0.3.17"
itertools = "0.11.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }
log = "0.4.17"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
solana-account-decoder = "~1.16.1"
solana-client = "~1.16.1"
solana-logger = "~1.16.1"
solana-program = "~1.16.1"
solana-quic-client = "~1.16.1"
solana-rpc = "~1.16.1"
solana-sdk = "~1.16.1"
solana-transaction-status = "~1.16.1"
tokio = { version = "1.14.1", features = ["full"] }
